--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+#config file which holds super secret bits - use the .template and rename
+code/config.json
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
